services/direct/deploy_blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-project-1-deployment-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-project-1-deployment-blue
      version: "1.0"
  template:
    metadata:
      labels:
        app: mlops-project-1-deployment-blue
        version: "1.0"
    spec:
      containers:
      - name: mlops-project-1-container-blue
        image: mlops_project_1:latest # to be updated
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
