services/direct/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlops-project-1-service-blue
spec:
  selector:
    app: mlops-project-1-deployment-blue
    version: "1.0"
  # type: LoadBalancer
  # type: NodePort
  ports:
  - protocol: TCP
    port: 8050
    targetPort: 8000 

  # - name: tcp
  #   port: 80
  #   targetPort: 8000  

  # - name: http
  #   port: 8050
  #   targetPort: 8000
  
  # ports:
  # - name: http
  #   port: 80
  #   targetPort: 8000
  # type: LoadBalancer
